--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Realty a Real Estates and Builders Category Flat Bootstarp Resposive Website Template | Home :: w3layouts</title>
+<title>Dinero</title>
 <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <link href="../static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -106,7 +106,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <h1>Dinero Search</h1>
  <h5>Search your preferably product</h5>
 
- <form method="post" action="/search">
+ <form method="post" action="SEARCH.py">
          <p><input type="text" name="add" value="" placeholder="Product-Name"></p>
         </p>
 <p><input type="text" name="add2" value="" placeholder="Web,Web,Web..."></p>
