--- a/templates/index.html
+++ b/templates/index.html
@@ -131,10 +131,10 @@
                     <h2>My Dinero Space</h2>
                     <hr class="star-light">
 
-                    <button type="button" class="btn btn-primary btn-lg btn-block">My History
+                    <button action="/history" type="button" class="btn btn-primary btn-lg btn-block">My History
                     <span class="glyphicon glyphicon-time" aria-hidden="true"></span></button>
 
-                    <button type="button" class="btn btn-primary btn-lg btn-block">My Favorites
+                    <button action="/favorites" type="button" class="btn btn-primary btn-lg btn-block">My Favorites
                     <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span></button>
                 </div>
             </div>
