--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -89,41 +89,29 @@
 
 
 
-    <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <!-- About Section -->
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                <div class="col-lg-12 text-center">
-                    <h2>Dinero Search</h2>
+                    <h2>My Dinero Space</h2>
                     <hr class="star-primary">
-					
-<h5>Search Items</h5>
 
- <form method="post" action="/search">
-         <p><input type="text" name="add" value="" placeholder="Product-Name"></p>
-        </p>
-<p><input type="text" name="add2" value="" placeholder="Web,Web,Web..."></p>
-        </p>
+                    <button action="/history" type="button" class="btn btn-success btn-lg btn-block">My History
+                    <span class="glyphicon glyphicon-time" aria-hidden="true"></span></button>
 
-<p class="submit"><input type="submit" value="Search Now" class="btn btn-success"></p>
-
-<!--
- <a href="http://localhost:8080/search"  class="button3">Search Now</a>
-<a href="http://localhost:8080/search"  class="button3">Search By Range</a>
-<a href="http://localhost:8080/search"  class="button3">Search Cheap</a>
- -->
-
- 
-		
-					
-					
+                    <button action="/favorites" type="button" class="btn btn-success btn-lg btn-block">My Favorites
+                    <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span></button>
                 </div>
             </div>
-           
+          
+		  
+		  
+		  
+                </div>
+            </div>
+        </div>
     </section>
-
-
 
 
 
