results page edited

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
 					
 <h5>Search Items</h5>
 
- <form method="post" action="/search">
+ <form method="post" action="http://dinero-web.heroku.com/search">
          <p><input type="text" name="add" value="" placeholder="Product-Name"></p>
         </p>
 <p><input type="text" name="add2" value="" placeholder="Web,Web,Web..."></p>
