--- a/templates/index.html
+++ b/templates/index.html
@@ -100,11 +100,30 @@
 					
 <h5>Search Items</h5>
 
- <form method="post" action="http://dinero-web.heroku.com/search">
-         <p><input type="text" name="add" value="" placeholder="Product-Name"></p>
-        </p>
+<form method="post" action="http://dinero-web.heroku.com/search">
+<p><input type="text" name="add" value="" placeholder="Product-Name"></p>
+      
+
+
+<!-- icons buttons: -->
+<form action="http://dinero-web.heroku.com">
+  <input type="image" src="../static/img/ebay.png" alt="Submit" width="48" height="48">
+</form>
+                    <form action="http://dinero-web.heroku.com">
+  <input type="image" src="../static/img/alii.png" alt="Submit" width="48" height="48">
+</form>
+                    <form action="http://dinero-web.heroku.com">
+  <input type="image" src="../static/img/dealextreame.png" alt="Submit" width="48" height="48">
+</form>
+                    <form action="http://dinero-web.heroku.com">
+  <input type="image" src="../static/img/amazon.jpg" alt="Submit" width="48" height="48">
+</form>
+
+
+     <!-- Webs field:
 <p><input type="text" name="add2" value="" placeholder="Web,Web,Web..."></p>
         </p>
+-->
 
 <p class="submit"><input type="submit" value="Search Now" class="btn btn-success"></p>
 
