--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -97,10 +97,10 @@
                     <h2>My Dinero Space</h2>
                     <hr class="star-primary">
 
-                    <button action="/history" type="button" class="btn btn-success btn-lg btn-block">My History
+                    <button action="http://dinero-web.heroku.com/history" type="button" class="btn btn-success btn-lg btn-block">My History
                     <span class="glyphicon glyphicon-time" aria-hidden="true"></span></button>
 
-                    <button action="/favorites" type="button" class="btn btn-success btn-lg btn-block">My Favorites
+                    <button action="http://dinero-web.heroku.com/favorites" type="button" class="btn btn-success btn-lg btn-block">My Favorites
                     <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span></button>
                 </div>
             </div>
