--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
 					
 <h5>Search Items</h5>
 
-<form method="post" href="http://dinero-web.heroku.com/search">
+<form method="post" action="http://dinero-web.heroku.com/search">
 <p><input type="text" name="add" value="" placeholder="Item Name"></p>
       
 
