--- a/templates/index.html
+++ b/templates/index.html
@@ -106,34 +106,18 @@
 
 
 <!-- icons buttons: -->
-<form action="http://dinero-web.heroku.com">
-  <input type="image" src="../static/img/ebay.png" alt="Submit" width="48" height="48">
-</form>
-                    <form action="http://dinero-web.heroku.com">
-  <input type="image" src="../static/img/alii.png" alt="Submit" width="48" height="48">
-</form>
-                    <form action="http://dinero-web.heroku.com">
-  <input type="image" src="../static/img/dealextreame.png" alt="Submit" width="48" height="48">
-</form>
-                    <form action="http://dinero-web.heroku.com">
-  <input type="image" src="../static/img/amazon.jpg" alt="Submit" width="48" height="48">
-</form>
 
-
+<p><input type="image" src="../static/img/ebay.png" alt="Submit" width="48" height="48"></p>
+<p><input type="image" src="../static/img/alii.png" alt="Submit" width="48" height="48"></p>
+<p><input type="image" src="../static/img/dealextreame.png" alt="Submit" width="48" height="48"></p>
+<p><input type="image" src="../static/img/amazon.jpg" alt="Submit" width="48" height="48"></p>
      <!-- Webs field:
 <p><input type="text" name="add2" value="" placeholder="Web,Web,Web..."></p>
         </p>
 -->
-
 <p class="submit"><input type="submit" value="Search Now" class="btn btn-success"></p>
+</form>
 
-<!--
- <a href="http://localhost:8080/search"  class="button3">Search Now</a>
-<a href="http://localhost:8080/search"  class="button3">Search By Range</a>
-<a href="http://localhost:8080/search"  class="button3">Search Cheap</a>
- -->
-
- 
 		
 					
 					
