--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -97,11 +97,18 @@
                     <h2>My Dinero Space</h2>
                     <hr class="star-primary">
 
-                    <button action="/history" type="button" class="btn btn-success btn-lg btn-block">My History
-                    <span class="glyphicon glyphicon-time" aria-hidden="true"></span></button>
 
-                    <button action="/favorites" type="button" class="btn btn-success btn-lg btn-block">My Favorites
-                    <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span></button>
+                        <a href="http://dinero-web.heroku.com/history">
+                            <button action="/history" type="button" class="btn btn-success btn-lg btn-block">My History
+                            <span class="glyphicon glyphicon-time" aria-hidden="true"></span></button>
+                        </a>
+
+
+                        <a href="http://dinero-web.heroku.com/favorites">
+                              <button action="/favorites" type="button" class="btn btn-success btn-lg btn-block">My Favorites
+                            <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span></button>
+                        </a>
+
                 </div>
             </div>
           
