--- a/templates/results.html
+++ b/templates/results.html
@@ -53,11 +53,11 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
-                        <a href="/">Dinero-Search</a>
+                       <li class="page-scroll">
+                        <a href="http://dinero-web.heroku.com/">Dinero-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">My-Space</a>
+                        <a href="http://dinero-web.heroku.com/my-space">My-Space</a>
                     </li>
 
                 </ul>
