--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -54,10 +54,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="/">Dinero-Search</a>
+                        <a href="http://dinero-web.heroku.com/">Dinero-Search</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">My-Space</a>
+                        <a href="http://dinero-web.heroku.com/my-space">My-Space</a>
                     </li>
 
                 </ul>
