--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Dinero</a>
+                <a class="navbar-brand" href="#page-top"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>  Dinero  </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
