--- a/templates/index.html
+++ b/templates/index.html
@@ -107,15 +107,17 @@
 
 <!-- icons buttons: -->
 
-<p><input type="image" src="../static/img/ebay.png" alt="Submit" width="48" height="48"></p>
-<p><input type="image" src="../static/img/alii.png" alt="Submit" width="48" height="48"></p>
-<p><input type="image" src="../static/img/dealextreame.png" alt="Submit" width="48" height="48"></p>
-<p><input type="image" src="../static/img/amazon.jpg" alt="Submit" width="48" height="48"></p>
+<p><input style="display: inline" type="image" src="../static/img/ebay.png" alt="Submit" width="48" height="48"></p>
+    <p><input style="display: inline" type="image" src="../static/img/alii.png" alt="Submit" width="48" height="48"></p>
+    <p><input style="display: inline" type="image" src="../static/img/dealextreame.png" alt="Submit" width="48" height="48"></p>
+    <p><input style="display: inline" type="image" src="../static/img/amazon.jpg" alt="Submit" width="48" height="48"></p>
      <!-- Webs field:
 <p><input type="text" name="add2" value="" placeholder="Web,Web,Web..."></p>
         </p>
 -->
-<p class="submit"><input type="submit" value="Search Now" class="btn btn-success"></p>
+
+<p class="submit"><input type="submit" value="Search Now" class="btn btn-success btn-lg"></p>
+
 </form>
 
 		
