--- a/templates/results.html
+++ b/templates/results.html
@@ -99,7 +99,7 @@
             </tr>
         </tfoot>
         <tbody>
-  <!--      {% for x in list %}
+        {% for x in list %}
             <tr>
                 <td>{{x[0]}}</td>
                 <td>{{x[1]}}</td>
@@ -108,7 +108,7 @@
                 <td><form method="post" action="http://dinero-web.heroku.com/results/add_to_favorites/{{x[0]}}"><p class="submit"><input type="submit" value="Like" class="btn btn-success" id={{x[0]}} ></p></td>
              
                 </tr>
-        {% endfor %} -->
+        {% endfor %}
        </tbody>
     </table>
 
