--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -98,7 +98,7 @@
             </tr>
         </tfoot>
         <tbody>
-  <!--      {% for x in list %}
+  \    {% for x in list %}
             <tr>
                 <td>{{x[0]}}</td>
                 <td>{{x[1]}}</td>
@@ -107,7 +107,7 @@
                 <td><form method="post" action="http://dinero-web.heroku.com/history/delete/{{x[0]}}"><p class="submit"><input type="submit" value="Delete" class="btn btn-danger" id={{x[0]}} ></p></td>
              
                 </tr>
-        {% endfor %} -->
+        {% endfor %}
        </tbody>
     </table>
 
