--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,22 @@
 
 <head>
 
+    <!-- style tag for icons -->
+    <style>
+.floating-box {
+    float: left;
+    width: 80px;
+    height: 50px;
+    margin: 10px;
+    border: 1px solid #0B2161;
+}
+
+.after-box {
+
+    height: 65px;
+}
+</style>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,9 +42,11 @@
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
+
+    <![endif]-->
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 
 </head>
 
@@ -106,18 +124,20 @@
 
 
 <!-- icons buttons: -->
+<div id="icons">
+<p><input class="floating-box" type="image" src="../static/img/ebay.png" alt="Submit" width="48" height="48"></p>
+    <p><input class="floating-box" type="image" src="../static/img/alii.png" alt="Submit" width="48" height="48"></p>
+    <p><input class="floating-box" type="image" src="../static/img/dealextreame.png" alt="Submit" width="48" height="48"></p>
+    <p><input class="floating-box" type="image" src="../static/img/amazon.jpg" alt="Submit" width="48" height="48"></p>
+</div>
 
-<p><input style="display: inline" type="image" src="../static/img/ebay.png" alt="Submit" width="48" height="48"></p>
-    <p><input style="display: inline" type="image" src="../static/img/alii.png" alt="Submit" width="48" height="48"></p>
-    <p><input style="display: inline" type="image" src="../static/img/dealextreame.png" alt="Submit" width="48" height="48"></p>
-    <p><input style="display: inline" type="image" src="../static/img/amazon.jpg" alt="Submit" width="48" height="48"></p>
-     <!-- Webs field:
+    <!-- Webs field:
 <p><input type="text" name="add2" value="" placeholder="Web,Web,Web..."></p>
         </p>
 -->
-
-<p class="submit"><input type="submit" value="Search Now" class="btn btn-success btn-lg"></p>
-
+<center>
+<p class="submit"><input type="submit" value="Search Now" class="btn btn-success after-box"></p>
+</center>
 </form>
 
 		
@@ -158,7 +178,8 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="../static/js/freelancer.js"></script>
-	
+<script type="text/css" >#icons{border:solid 1px red;}.icon{border:solid 1px black; display:inline;}</script>
+
 	 <script type="text/javascript" language="javascript" src="http://cdn.datatables.net/1.10.10/js/jquery.dataTables.min.js"></script>
                         <script>
                         $(document).ready(function() {
@@ -176,7 +197,6 @@
     ]
 } );
                                 $("#results").DataTable();
-                              
                         } );
                         </script>
 
