--- a/templates/results.html
+++ b/templates/results.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/jquery.dataTables.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/dataTables.semanticui.min.css">
+ <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
 
     <title>Dinero</title>
 
@@ -87,7 +88,7 @@
 					
 <h5>Search your preferably product</h5>
 
-  <table id="results" cellspacing="0" width="100%" class="row-border">
+  <table id="results" cellspacing="0" width="100%" class="ui celled table">
         <thead>
             <tr>
                 <th>Title</th>
