--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -23,7 +23,7 @@
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
         <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.11/css/dataTables.semanticui.min.css">
- <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
+
 
     <link rel="stylesheet" type="text/css" href="../static/DataTables/datatables.css">
 
@@ -81,7 +81,7 @@
                     <h2>Favorites</h2>
                     <hr class="star-primary">
 					
-<h5>Search your preferably product</h5>
+<h5>Your Favorites Items</h5>
 
   <table id="favorites" cellspacing="0" width="100%" class="ui celled table">
         <thead>
