--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
                     <h2>Dinero Search</h2>
                     <hr class="star-primary">
 					
-<h5>Search Items</h5>
+<h5>Easy To Shop !</h5>
 
 <form method="post" action="http://dinero-web.heroku.com/search">
 <p><input type="text" name="add" value="" placeholder="Item Name"></p>
