--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -94,7 +94,7 @@
                     <h2>Login</h2>
                     <hr class="star-primary">
 
-<h5>Shopping is easy!</h5>
+<h5>Easy To Shop !</h5>
 
  <form method="post" action="/search">
          <p><input type="text" name="add" value="" placeholder="Email"></p>
