--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -4,6 +4,8 @@
 
 <head>
 
+
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -96,16 +98,22 @@
 
 <h5>Easy To Shop !</h5>
 
- <form method="post" action="/search">
+ <form method="post" action="/search" style="display: inline;" >
          <p><input type="text" name="add" value="" placeholder="Email"></p>
         </p>
 <p><input type="password" name="add2" value="" placeholder="Password"></p>
         </p>
-     <p class="submit"><input type="submit" value="Sign-in " class="btn btn-success"></p>
-     <p class="submit"><input type="submit" value="Login with Facebook" class="btn btn-success"></p>
+     <p class="submit" style="width: 30px; height: 65px; display: inline-block;"><input type="submit" value="Sign-in " class="btn btn-success btn-lg"></p>
 
      </form>
 
+                    <span style="padding-top:30px;width: 30px; height: 65px;">
+                    <a class="btn btn-block btn-facebook btn-primary"  >
+  <span class="fa fa-facebook" style="padding-right:15px;"></span>
+        Sign In With Facebook
+</a>
+
+
                 </div>
             </div>
 
@@ -118,28 +126,6 @@
         </div>
     </section>
 
-        <!-- Footer -->
-    <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                    <div class="footer-col col-md-4">
-
-                    </div>
-                    <div class="footer-col col-md-4">
-                   <h3>by S-Bryo</h3>
-                        <ul class="list-inline">
-
-                        </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </footer>
 
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
