--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -103,12 +103,12 @@
         </p>
 <p><input type="password" name="add2" value="" placeholder="Password"></p>
         </p>
-     <p class="submit" style="width: 30px; height: 65px; display: inline-block;"><input type="submit" value="Sign-in " class="btn btn-success btn-lg"></p>
+     <p class="submit" style="width: 30px; height: 65px; display: inline-block;"><input type="submit" value="Sign-in " class="btn btn-success btn-lg" href="http://dinero-web.heroku.com/dinero"></p>
 
      </form>
 
                     <span style="padding-top:30px;width: 30px; height: 65px;">
-                    <a class="btn btn-block btn-facebook btn-primary"  >
+                    <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/dinero" >
   <span class="fa fa-facebook" style="padding-right:15px;"></span>
         Sign In With Facebook
 </a>
