--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -103,7 +103,7 @@
         </p>
 <p><input type="password" name="add2" value="" placeholder="Password"></p>
         </p>
-     <p class="submit" style="width: 30px; height: 65px; display: inline-block;"><input type="submit" value="Sign-in " class="btn btn-success btn-lg" href="http://dinero-web.heroku.com/dinero"></p>
+     <p class="submit" style="width: 30px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Sign-in " class="btn btn-success btn-lg"></p>
 
      </form>
 
