--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -98,7 +98,7 @@
 
 <h5>Easy To Shop !</h5>
 
- <form method="post" action="/dinero" style="display: inline;" >
+ <form method="post" action="http://dinero-web.heroku.com/dinero" style="display: inline;" >
          <p><input type="text" name="add" value="" placeholder="Email"></p>
         </p>
 <p><input type="password" name="add2" value="" placeholder="Password"></p>
