--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Login</h2>
-                    <hr class="star-primary">
+                   <!--           <hr class="star-primary"> -->
 
 <h5>Easy To Shop !</h5>
 
