--- a/templates/index.html
+++ b/templates/index.html
@@ -116,7 +116,7 @@
                 <div class="col-lg-12 text-center">
                 <div class="col-lg-12 text-center">
                     <h2>Dinero Search</h2>
-                    <hr class="star-primary">
+                  <!--           <hr class="star-primary"> -->
 					
 <h5>Easy To Shop !</h5>
 
