--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Favorites</h2>
-                    <hr class="star-primary">
+                    <!--           <hr class="star-primary"> -->
 					
 <h5>Your Favorites Items</h5>
 
