--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -82,7 +82,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>History</h2>
-                    <hr class="star-primary">
+                  <!--           <hr class="star-primary"> -->
 					
 <h5>Your Items History</h5>
 
