--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -95,7 +95,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>My Dinero Space</h2>
-                    <hr class="star-primary">
+                  <!--           <hr class="star-primary"> -->
 
 
                         <a href="http://dinero-web.heroku.com/history">
