--- a/templates/results.html
+++ b/templates/results.html
@@ -84,9 +84,9 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Results</h2>
-                    <hr class="star-primary">
+         <!--           <hr class="star-primary"> -->
 					
-<h5>Search your preferably product</h5>
+<h5>Dinero Found these items for you : </h5>
 
   <table id="results" cellspacing="0" width="100%" class="ui celled table">
        <tbody>
