--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -55,7 +55,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="http://dinero-web.heroku.com/">Dinero-Search</a>
+                        <a href="http://dinero-web.heroku.com/dinero">Dinero-Search</a>
                     </li>
                     <li class="page-scroll">
                         <a href="http://dinero-web.heroku.com/my-space">My-Space</a>
