--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -97,7 +97,7 @@
                     <h2>My Dinero Space</h2>
                   <!--           <hr class="star-primary"> -->
 
-
+<div></div>
                         <a href="http://dinero-web.heroku.com/history">
                             <button action="/history" type="button" class="btn btn-success btn-lg btn-block">My History
                             <span class="glyphicon glyphicon-time" aria-hidden="true"></span></button>
