--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -7066,14 +7066,10 @@ div#content {
     display: none;
     }
 
-div#loading {
-    top: 200 px;
-    margin: auto;
-    position: absolute;
-    z-index: 1000;
-    width: 160px;
-    height: 24px;
-    background: url(../img/loadingimage.gif) no-repeat;
-    cursor: wait;
-    }
-
+#load{
+    width:100%;
+    height:100%;
+    position:fixed;
+    z-index:9999;
+    background:url("https://www.creditmutuel.fr/cmne/fr/banques/webservices/nswr/images/loading.gif") no-repeat center center rgba(0,0,0,0.25)
+}
