--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -7071,5 +7071,5 @@ div#content {
     height:100%;
     position:fixed;
     z-index:9999;
-    background:url("../img/loadingimage.gif") no-repeat center center rgba(0,0,0,0.25)
+    background:url("https://www.google.co.il/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjJkauz8rDMAhUWOsAKHRTnCrQQjRwIBw&url=http%3A%2F%2Fwww.downgraf.com%2Finspiration%2F25-beautiful-loading-bar-design-examples-gif-animated%2F&psig=AFQjCNG361wZ5xqhwNAi5LQCHC0Q9S25RQ&ust=1461917813793622") no-repeat center center rgba(0,0,0,0.25)
 }
