--- a/templates/results.html
+++ b/templates/results.html
@@ -40,7 +40,7 @@
     height:100%;
     position:fixed;
     z-index:9999;
-    background:url("https://www.google.co.il/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjJkauz8rDMAhUWOsAKHRTnCrQQjRwIBw&url=%2Furl%3Fsa%3Di%26rct%3Dj%26q%3D%26esrc%3Ds%26source%3Dimages%26cd%3D%26cad%3Drja%26uact%3D8%26ved%3D0ahUKEwjJkauz8rDMAhUWOsAKHRTnCrQQjRwIBw%26url%3Dhttp%253A%252F%252Fwww.downgraf.com%252Finspiration%252F25-beautiful-loading-bar-design-examples-gif-animated%252F%26psig%3DAFQjCNG361wZ5xqhwNAi5LQCHC0Q9S25RQ%26ust%3D1461917813793622&psig=AFQjCNG361wZ5xqhwNAi5LQCHC0Q9S25RQ&ust=1461917813793622") no-repeat center center rgba(0,0,0,0.25)
+    background:url("https://www.google.co.il/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjJkauz8rDMAhUWOsAKHRTnCrQQjRwIBw&url=%2Furl%3Fsa%3Di%26rct%3Dj%26q%3D%26esrc%3Ds%26source%3Dimages%26cd%3D%26cad%3Drja%26uact%3D8%26ved%3D0ahUKEwjJkauz8rDMAhUWOsAKHRTnCrQQjRwIBw%26url%3Dhttp%253A%252F%252Fwww.downgraf.com%252Finspiration%252F25-beautiful-loading-bar-design-examples-gif-animated%252F%26psig%3DAFQjCNG361wZ5xqhwNAi5LQCHC0Q9S25RQ%26ust%3D1461917813793622&psig=AFQjCNG361wZ5xqhwNAi5LQCHC0Q9S25RQ&ust=1461917813793622") no-repeat center center
 }
 
         </style>
