--- a/templates/results.html
+++ b/templates/results.html
@@ -97,7 +97,7 @@
 					
 <h5>Dinero Found these items for you : </h5>
 
-                <div id="load"></div>
+               <center><div id="load"></div></center>
 <div id="contents">
 
 
