--- a/templates/results.html
+++ b/templates/results.html
@@ -40,7 +40,8 @@
     height:100%;
     position:fixed;
     z-index:9999;
-    background:url("http://downgraf.com/wp-content/uploads/2014/09/01-progress.gif") no-repeat center center
+
+    background:url("https://d13yacurqjgara.cloudfront.net/users/31776/screenshots/754788/loading_cart.gif") no-repeat center center
 }
 
         </style>
