--- a/templates/results.html
+++ b/templates/results.html
@@ -40,8 +40,7 @@
     height:100%;
     position:fixed;
     z-index:9999;
-
-    background:url("https://d13yacurqjgara.cloudfront.net/users/31776/screenshots/754788/loading_cart.gif") no-repeat center center
+    background:url("http://2.bp.blogspot.com/-JbBntT9YAY4/ViO_tqgWarI/AAAAAAAAAJk/9Q5Yyg4Hf8g/s1600-r/loading_cart.gif") no-repeat center center
 }
 
         </style>
